cabal-version: 3.0
name: xml-types-content
version: 0
synopsis: Utilities for dealing with Content-values of "xml-types"
description:
  The `Content` type in "xml-types" is tricky and naive usage of it can lead to bugs.
  You cannot simply construct `ContentText` from any textual value.
  You must encode certain character ranges via entities.
  This library does that for you by providing mappers from `Text` to `[Content]`.

homepage: https://github.com/nikita-volkov/xml-types-content
bug-reports: https://github.com/nikita-volkov/xml-types-content/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2024 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/xml-types-content.git

common base
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DefaultSignatures
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    UndecidableSuperClasses

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    XmlTypesContent

  build-depends:
    base >=4.13 && <5,
    text >=1.2 && <3,
    text-builder-dev ^>=0.3.9,
    xml-types ^>=0.3.8,

test-suite hspec
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: src/hspec
  main-is: Main.hs
  other-modules:
    XmlTypesContentSpec

  build-tool-depends:
    hspec-discover:hspec-discover >=2 && <3

  build-depends:
    QuickCheck >=2.13 && <3,
    hspec >=2.11 && <3,
    lawful-conversions ^>=0.1.5,
    rerebase >=1 && <2,
    xml-conduit ^>=1.9,
    xml-types ^>=0.3.8,
    xml-types-content,
